<resources>
    <string name="app_name">Log In (version 1)</string>
    <string name="user_name">Nombre usuario</string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="create_account">Crear cuenta</string>
    <string name="log_in">Iniciar sesión</string>
    <string name="sing_up">Registrarse</string>
    <string name="close_session">Cerrar sesión</string>
    <string name="delete_account">Eliminar cuenta</string>
</resources>